<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music</string>
    <string name="action_settings">设置</string>

    <string name="all_music_item_txt">歌曲</string>
    <string name="album_music_item_txt">专辑</string>
    <string name="singer_music_item_txt">歌手</string>
    <string name="favorite_music_item_txt">收藏</string>
    
    <string name="artist_music_num">首歌曲</string>
    <string name="scan_music_str">扫描歌曲</string>
    
    
    <string name="play_music_artist_str">歌手：</string>
    <string name="play_music_album_str">专辑：</string>
    <string name="init_time_str">00:00</string>
    
    <string name="back_bt_str">返回</string>
    <string name="back_list_str">列表</string>
    
    
    
</resources>
